[package]
name = "echoes-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = {version = "0.5.3", features = ["std"]}
async-recursion = "1.1.1"
axum = "0.8.9"
axum-macros = "0.5.1"
chrono = "0.4.45"
dotenv = "0.15.0"
futures = "0.3.32"
jsonwebtoken = {version = "10.4.0", features= ["rust_crypto"]}
reqwest = {version = "0.13.4", features = ["json"]}
serde = "1.0.228"
serde_json = "1.0.150"
sqlx = {version = "0.8.6", features = ["sqlite", "runtime-tokio", "migrate"]}
tokio = { version = "1.52.3", features = ["full"] }
tower-http = {version = "0.7.0", features = ["cors"] }
